hphp/hack/test/typecheck/reactive/rx_of_scope9.php.like_types.exp
File "rx_of_scope9.php", line 9, characters 33-36:
Reactive functions can only call other reactive functions. (Typing[4200])
File "rx_of_scope9.php", line 8, characters 41-57:
This function is non-reactive.
